<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".configuracion">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="40dp"
            android:text="@string/como_funciona"
            android:textColor="#6b0009"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="327dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:text="@string/uno"
            android:textColor="#000"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="326dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:text="@string/dos"
            android:textColor="#000"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="326dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:text="@string/tres"
            android:textColor="#000"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="326dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:text="@string/cuatro"
            android:textColor="#000"
            android:textSize="18dp" />


        <TextView
            android:id="@+id/textView17"
            android:layout_width="326dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/cinco"
            android:textColor="#000"
            android:textSize="18dp" />


    </LinearLayout>
</RelativeLayout>